2010-09-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-open-connection): Wait for the response to STARTTLS
	before starting negotiation.

	* gnus-art.el (gnus-treat-from-gravatar): Change default to nil for
	privacy reasons.
	(gnus-treat-mail-gravatar): Ditto.

	* gnus-ems.el (gnus-put-image): Don't put any non-blank text into the
	buffer when inserting images.  Inserting text into the headers, for
	instance, can make them invalid.

2010-09-25  Julien Danjou  <julien@danjou.info>

	* rfc1843.el: Remove useless rfc1843-old-gnus-decode-header-function
	variables.

	* nnheader.el: Remove useless variables news-reply-yank-from and
	news-reply-yank-message-id.

	* mml2015.el: Remove useless mc-default-scheme and mc-schemes
	variables.

	* mml1991.el: Remove useless mml1991-verbose.

	* gnus.el: Remove useless variable gnus-use-generic-from.
	Remove obsolete variable gnus-topic-indentation.

	* gnus-uu.el: Remove useless gnus-uu-shar-file-name.

	* gnus-sum.el: Remove useless gnus-newsgroup-none-id.

	* gnus-picon.el: Remove useless gnus-picon-setup-p variable.

	* gnus-group.el: Remove useless gnus-group-icon-cache.
	Remove useless gnus-ephemeral-group-server.

	* gnus-bookmark.el: Remove useless gnus-bookmark-after-jump-hook.

	* mml2015.el: Remove useless mml2015-verbose.

	* mml-smime.el: Remove useless mml-smime-verbose.

	* gnus.el: Remove useless gnus-local-domain.

	* gnus-gravatar.el (gnus-gravatar-transform-address): Use
	gnus-gravatar-size.

	* gnus-art.el: Remove useless gnus-treat-translate.

2010-09-24  Julien Danjou  <julien@danjou.info>

	* gnus-sum.el: Add support for Gravatars.

	* gnus-art.el: Add support for Gravatars.

	* gnus-gravatar.el: Add this file.

	* gravatar.el: Add this file.

2010-09-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-fetch-faq): Removed.

	* gnus-group.el (gnus-group-fetch-faq): Removed.

	* gnus.el (gnus-group-faq-directory): Removed.
