@@ -1,5 +1,8 @@
 2010-09-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus.el (gnus-local-domain): Put gnus-local-domain back again, since
+	apparently third-party libraries depend on it.
+
 	* nnimap.el (nnimap-open-connection): Wait for the response to STARTTLS
 	before starting negotiation.
 
